# voice-to-text-tg-bot

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  whisper_ops.py
.github/workflows/: python-lint.yaml  python-tests.yml
src/: .env_sample  main.py
tests/: test_whisper.py  test_whisper_ops.py
