[tool.poetry]
name = "voice-to-text-tg-bot"
version = "0.1.0"
description = ""
authors = ["modernpacifist <modernpacifist@gmail.com>"]
readme = "README.md"
packages = [{include = "voice_to_text_tg_bot"}]

[tool.poetry.dependencies]
python = "^3.9"
python-dotenv = "^1.0.0"
python-telegram-bot = "^20.2"
openai-whisper = {git = "https://github.com/openai/whisper.git"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
